--- a/resources/views/products/index.phtml
+++ b/resources/views/products/index.phtml
@@ -6,28 +6,28 @@
         <?php foreach ($this->view->smartphones as $key => $smartphone) { ?>
             <div class="col-md-6 col-lg-6 mb-3">
                 <div class="card h-100">
-                    <div id="<?= 'phone'.$smartphone['id'] ?>" class="carousel slide" data-bs-ride="carousel">
+                    <div id="<?= 'phone' . $smartphone['id'] ?>" class="carousel slide" data-bs-ride="carousel">
                         <ol class="carousel-indicators">
-                            <li data-bs-target="#<?= 'phone'.$smartphone['id'] ?>" data-bs-slide-to="0" class=""></li>
-                            <li data-bs-target="#<?= 'phone'.$smartphone['id'] ?>" data-bs-slide-to="1" class="active" aria-current="true"></li>
-                            <li data-bs-target="#<?= 'phone'.$smartphone['id'] ?>" data-bs-slide-to="2"></li>
+                            <?php for ($i=0; $i <= 4; $i++): ?>
+                                <?php if (!is_null($smartphone["photo{$i}"])) : ?>
+                                    <li data-bs-target="#<?= 'phone' . $smartphone['id'] ?>" data-bs-slide-to="<?= $i ?>" class="<?= $i == 0 ? 'active' : '' ?>" aria-current="true"></li>
+                                <?php endif; ?>
+                            <?php endfor; ?>
                         </ol>
                         <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img class="d-block w-100" src="../assets/img/elements/13.jpg" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="../assets/img/elements/12.jpg" alt="First slide">
-                            </div>
-                            <div class="carousel-item">
-                                <img class="d-block w-100" src="../assets/img/elements/11.jpg" alt="First slide">
-                            </div>
+                            <?php for ($i = 0; $i <= 4; $i++): ?>
+                                <?php if (!is_null($smartphone["photo{$i}"])) : ?>
+                                    <div class="carousel-item <?= $i == 0 ? 'active' : '' ?>">
+                                        <img class="d-block w-100" src="<?= (file_exists('storage/products/smartphones/' . $smartphone["photo$i"]) ? "storage/products/smartphones/" . $smartphone["photo$i"] : ''); ?>">
+                                    </div>
+                                <?php endif; ?>
+                            <?php endfor; ?>
                         </div>
-                        <a class="carousel-control-prev" href="#<?= 'phone'.$smartphone['id'] ?>" role="button" data-bs-slide="prev">
+                        <a class="carousel-control-prev" href="#<?= 'phone' . $smartphone['id'] ?>" role="button" data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </a>
-                        <a class="carousel-control-next" href="#<?= 'phone'.$smartphone['id'] ?>" role="button" data-bs-slide="next">
+                        <a class="carousel-control-next" href="#<?= 'phone' . $smartphone['id'] ?>" role="button" data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </a>
@@ -38,8 +38,8 @@
                             <li class="list-group-item"><strong>Marca:</strong> <?= $smartphone['marca'] ?></li>
                             <li class="list-group-item"><strong>Modelo:</strong> <?= $smartphone['modelo'] ?></li>
                         </ul>
-                        <a href="javascript:void(0)" class="btn btn-info mt-3">Editar</a>
-                        <a href="javascript:void(0)" class="btn btn-danger mt-3">Deletar</a>
+                        <a href="/editproduct?p=smartphone&id=<?= $smartphone['id'] ?>" class="btn btn-info mt-3">Editar</a>
+                        <a href="/deleteproduct?p=smartphone&id=<?= $smartphone['id'] ?>" class="btn btn-danger mt-3">Deletar</a>
                     </div>
                 </div>
             </div>
